--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get:
+  sqflite:
   url_launcher:
   http:
-  fluttertoast:
-  provider:
+  get:
+  path:
 
 dev_dependencies:
   flutter_test:
